[tool.poetry]
name = "aula08-bootcamp"
version = "0.1.0"
description = ""
authors = ["Sidney Martins Neto <sydney.martinsn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.18.3"
pandas = "^2.2.1"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
